# mr_sparkru

./: .gitignore  .secrets.baseline  LICENSE.md  README.md  ThumbnailHistoryHalfNode.py  ThumbnailHistoryNode.py  demo_data.json  mr_sparkru.icns  mr_sparkru.py  mr_sparkru.spec  mr_sparkru_cli.py  mr_sparkru_core.py  pyproject.toml  thumbnail_history.fbs  thumbnail_history_half.fbs
