[project]
name = "mr-sparkru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6",
    "pillow",
    "questionary",
    "flatbuffers",
    "numpy>=2.3.3",
]
[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pyinstaller>=6.16.0",
]
